syntax = "proto3";

package net;

// MUST specify the Go import path for this proto's generated code:
option go_package = "github.com/gochain/gochain/pkg/proto/net";

// Your message definitions below
message Message {
  string type = 1;
  bytes payload = 2;
  int64 timestamp_unix_nano = 3;
  bytes from_peer_id = 4;
  bytes sender_peer_id = 5;
  bytes signature = 6;
}